# git-wrapper

./: .gitignore  .gitwrapper  .npmignore  Cargo.toml  LICENSE  PLAN.md  README.md  RUST_MIGRATION.md  biome.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml  rust-ci.yml
scripts/: build-all.ts
src/: app.rs  cli.rs  cli.ts  commands.rs  config.rs  config.ts  core.ts  gh.rs  gh.ts  git.rs  git.ts  log.rs  log.ts  main.rs  runner.rs  runner.ts  testutil.rs  types.rs  types.ts
src/commands/: doctor.rs  doctor.ts  init.rs  init.ts  which.rs  which.ts
test/: cli.smoke.test.ts  config.test.ts  core.test.ts  doctor.test.ts  gh.test.ts  init.test.ts  integration.test.ts
tests/: passthrough.rs  smoke.rs  which.rs
